--- a/login.html
+++ b/login.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>sdasdasdasdasd</h2>
-    hhhhhhh
-    <h2>彭玉龙是大傻逼</h2>
+    <form action="">
+        <input type="text">
+        <input type="password" name="pwd">
+        <input type="button">提交
+    </form>
 </body>
-</html> 
+</html>
